Mon Jun 23 16:49:17 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkSet.h:
        * dds/DCPS/transport/framework/DataLinkSet.inl:

          Fixed passing in listener from stack to method that may end up
          being processed on the transport thread.

Mon Jun 23 16:42:58 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSApp.h:

          Added call to domain_participant_factory() to ensure it is created
          when we are doing lazy initialization.

        * tests/Utils/DDSApp.cpp:

          Removed debug statements.

Sat Jun 21 11:08:50 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/PersistentInfoRepo/run_test.pl:

          Reverted inadvertent change.

Sat Jun 21 11:01:18 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSFacade.h:

          Missed calling qos_func to allow setting of Qos for DataReaders.

Sat Jun 21 10:56:40 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSFacade.h:

          Removed unneeded method.

Fri Jun 20 17:47:49 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSFacade.h:

          Fixed error in template.

Fri Jun 20 16:54:53 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/Utils/DDSApp.h:
        * tests/Utils/DDSApp.cpp:
        * tests/Utils/DDSFacade.h:

          Added being able to create DDS entities using non-default qos and
          providing listeners and non-default masks.

        * tests/DCPS/PersistentInfoRepo/Subscriber.cpp:

          Removed setting verbosity flags for diagnostics.

        * tests/DCPS/PersistentInfoRepo/run_test.pl:

          Removed explicitly setting verbose flag and added it as a command
          line parameter.

Tue Jun 17 20:10:11 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
