@@ -1,3 +1,11 @@
+Mon Jun 23 19:09:32 UTC 2014  Byron Harris  <harrisb@ociweb.com>
+
+        * dds/DCPS/MessageTracker.h:
+        * dds/DCPS/MessageTracker.cpp:
+
+	  Added a simple class to track message count and wait
+	  until all messages have been accounted for.
+
 Mon Jun 23 16:49:17 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * dds/DCPS/transport/framework/DataLink.h:
